some changes were intered into HTML-code
1 - some links to contact and to file were added
2 - .jpg pictures were added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header class="page-header">
       <div class="container">
-    E-mail: sssmakovka@gmail.com<br>
-    Phone: +375(25)530-91-06<br>
-    Skype: sssmakovka
+    <a class="header-email" href="mailto:sssmakovka@gmail.com">sssmakovka@gmail.com</a><br>
+    <a class="header-phone" href="tel:+375255309106">+375(25)530-91-06</a><br>
+    <a class="header-phone" href="skype">sssmakovka</a>
       </div>
     </header>
 
@@ -26,6 +26,10 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <div class="container">
+        <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt"Фотография неопознанного енота">
+          <figcaption>Здесь будет моя фотография</figcaption>
+        </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -37,8 +41,11 @@
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
       <div class="container">
+        <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт кота-коуча Сардельки">
+        </figure>
 
-      <h3>Сайт инструктора Кекса</h3>
+      <h3>Сайт кота-коуча Сардельки</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -48,9 +55,9 @@
 
     <footer class="page-footer">
       <div class ="container">
-      E-mail: sssmakovka@gmail.com<br>
-      Phone: +375(25)530-91-06<br>
-      Skype: sssmakovka
+      <a class="footer-email" href="mailto:sssmakovka@gmail.com">sssmakovka@gmail.com</a><br>
+      <a class="footer-phone" href="tel:+375255309106">+375(25)530-91-06</a><br>
+      <a class="footer-phone" href="skype:sssmakovka">sssmakovka</a>
     </div>
     </footer>
   </body>
