--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </figure>
 
       <h3>Сайт кота-коуча Сардельки</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <p>Мой первый сайт. Небольшой лендинг о школе для начинающих.</p>
+        <a class="button" href="source/Keks/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
