fixed the web page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
     <a class="header-email" href="mailto:sssmakovka@gmail.com">sssmakovka@gmail.com</a><br>
     <a class="header-phone" href="tel:+375255309106">+375(25)530-91-06</a><br>
-    <a class="header-phone" href="skype:sssmakovka">sssmakovka</a>
+    <a class="header-skype" href="skype:sssmakovka">sssmakovka</a>
       </div>
     </header>
 
@@ -27,8 +27,8 @@
       <h2 class="subheading">Давайте познакомимся</h2>
       <div class="container">
         <figure class="user-image">
-          <img src="files/user.jpg" width="928" height="536" alt"Фотография неопознанного енота"> 
-          <figcaption>Здесь будет моя фотография</figcaption>
+          <img src="img/my-CV-photo.jpg" width="528" height="636" alt = "Фотография неопознанного енота"> 
+          <figcaption>Моя фотография</figcaption>
         </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -60,6 +60,7 @@
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
+      <a class = "button" href ="#">Открыть страницу</a>
     </div>
     </section>
 
@@ -67,7 +68,7 @@
       <div class ="container">
       <a class="footer-email" href="mailto:sssmakovka@gmail.com">sssmakovka@gmail.com</a><br>
       <a class="footer-phone" href="+375255309106">+375(25)530-91-06</a><br>
-      <a class="footer-phone" href="skype:sssmakovka">sssmakovka</a>
+      <a class="footer-skype" href="skype:sssmakovka">sssmakovka</a>
     </div>
     </footer>
   </body>
