changed hero's photo size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2 class="subheading">Давайте познакомимся</h2>
       <div class="container">
         <figure class="user-image">
-          <img src="img/my-CV-photo.jpg" width="528" height="636" alt = "Фотография неопознанного енота"> 
+          <img src="img/my-CV-photo.jpg" width="528" alt = "Фотография неопознанного енота"> 
           <figcaption>Моя фотография</figcaption>
         </figure>
       <h3>Пара слов о себе</h3>
